style: fix overflow of text

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -44,6 +44,12 @@
   }
 }
 
+@media (max-width: 480px) {
+  .hero__title {
+    font-size: 2.5rem;
+  }  
+}
+
 .navbar__title {
   color: #ff0;
   text-transform: lowercase;
@@ -63,8 +69,9 @@
 
 .button.button--secondary {
   box-shadow: 0px 3px 8px 0px #00000094;
-  margin-right: 12px;
-  width: 220px;
+  flex: 1;
+  margin: 0 8px;
+  max-width: 220px;
 }
 
 .row.row-center {
